本番環境　再度 DBパスワードを読み込む環境変数を設定

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   <<: *default
   database: NameCardOCR_production
   username: NameCardOCR
-  password: Rails.application.credentials[:data_base_password]
+  password: <%= Rails.application.credentials[:data_base_password]%>
   # password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
