Revert "本番環境　再度 DBパスワード-環境変数を ENVに戻す"
This reverts commit c5190d024b11a438be98b21c190c87cdbfc67495.

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,4 +51,5 @@ production:
   <<: *default
   database: NameCardOCR_production
   username: NameCardOCR
-  password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
+  password: <%= Rails.application.credentials[:data_base_password]%>
+  # password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
