本番環境　再度 DBパスワードを読み込む環境変数を設定 socketとusername修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,7 @@ test:
 production:
   <<: *default
   database: NameCardOCR_production
-  username: NameCardOCR
+  username: root
   password: <%= Rails.application.credentials[:data_base_password]%>
+  socket: /var/lib/mysql/mysql.sock
   # password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
