--- a/config/database.yml
+++ b/config/database.yml
@@ -51,6 +51,6 @@ production:
   <<: *default
   database: NameCardOCR_production
   username: root
-  password: <%= Rails.application.credentials[:data_base_password]%>
+  password: <% Rails.application.credentials[:data_base_password]%>
   socket: /var/lib/mysql/mysql.sock
   # password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
