本番環境　再度 DBパスワードを読み込む環境変数を設定
結局 本番環境のDBパスワードはENVに頼ることにしました

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,6 +51,5 @@ production:
   <<: *default
   database: NameCardOCR_production
   username: root
-  password: <% Rails.application.credentials[:data_base_password]%>
+  password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
-  # password: <%= ENV['NAMECARDOCR_DATABASE_PASSWORD'] %>
