--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,6 @@ production:
   <<: *default
   database: NameCardOCR_production
   username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  # password: <%= ENV['DATABASE_PASSWORD'] %>
+  password: <%= Rails.application.credentials[:data_base_password]%>
   socket: /var/lib/mysql/mysql.sock
